Add files and fix head.html to render properly

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,11 +6,14 @@
     content="{{if .IsHome}}{{$.Site.Data.config.description}}{{else}}{{.Summary}}{{end}}"
   />
   <title>
-    {{ if .Title }}{{ .Title }}{{ else }}{{ $.Site.Data.config.page_title }}{{
-    end }}
+    {{ if .Title }}{{ .Title }}{{ else }}{{ $.Site.Data.config.page_title }}{{ end }}
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" type="image/png" href="{{$.Site.BaseURL}}/icon.png" />
+  <link
+    rel="shortcut icon"
+    type="image/png"
+    href="{{$.Site.BaseURL}}/icon.png"
+  />
 
   <!-- CSS Stylesheets and Fonts -->
   <link
@@ -30,15 +33,11 @@
   <script src="{{$darkMode.Permalink}}"></script>
   {{partial "katex.html" .}}
 
-  {{ $popover := resources.Get "js/popover.js" | resources.Fingerprint "md5" |
-  resources.Minify }}
+  {{ $popover := resources.Get "js/popover.js" | resources.Fingerprint "md5" | resources.Minify }}
   <script src="{{$popover.Permalink}}"></script>
 
   <!--  Preload page vars  -->
-  {{$linkIndex := resources.Get "indices/linkIndex.json" | resources.Fingerprint
-  "md5" | resources.Minify | }} {{$contentIndex := resources.Get
-  "indices/contentIndex.json" | resources.Fingerprint "md5" | resources.Minify
-  }}
+  {{$linkIndex := resources.Get "indices/linkIndex.json" | resources.Fingerprint "md5" | resources.Minify | }} {{$contentIndex := resources.Get "indices/contentIndex.json" | resources.Fingerprint "md5" | resources.Minify }}
   <script>
     const BASE_URL = {{.Site.BaseURL}}
     const fetchData = Promise.all([
@@ -56,45 +55,33 @@
           links,
           content,
         }))
-
-      const render = () => {
-      // NOTE: everything within this callback will be executed for every page navigation. This is a good place to put JavaScript that loads or modifies data on the page, adds event listeners, etc. If you are only dealing with basic DOM replacement, use the init function
-
-      const siteBaseURL = new URL({{$.Site.BaseURL}});
-      const pathBase = siteBaseURL.pathname;
-      const pathWindow = window.location.pathname;
-      const isHome = pathBase == pathWindow;
-
-      {{if $.Site.Data.config.enableFooter}}
+  </script>
+  {{if $.Site.Data.config.enableSPA}}
+  {{ $router := resources.Get "js/router.js" | resources.Fingerprint "md5" | resources.Minify }}
+  <script type="module">
+    import { attachSPARouting } from '{{$router.Permalink}}';
+    // NOTE: everything within this callback will be executed for every page navigation. This is a good place to put JavaScript that loads or modifies data on the page.
+    const draw = () => {
       const container = document.getElementById("graph-container")
       // retry if the graph is not ready
-      if (!container) return requestAnimationFrame(render)
+      if (!container) return requestAnimationFrame(draw)
       // clear the graph in case there is anything within it
       container.textContent = ""
 
-      const drawGlobal = isHome && {{$.Site.Data.graphConfig.enableGlobalGraph}};
       drawGraph(
-          {{strings.TrimRight "/" .Site.BaseURL}},
-          drawGlobal,
-          {{$.Site.Data.graphConfig.paths}},
-          drawGlobal ? {{$.Site.Data.graphConfig.globalGraph}} : {{$.Site.Data.graphConfig.localGraph}}
-        );
-
-      {{end}}
+        {{strings.TrimRight "/" .Site.BaseURL}},
+        {{$.Site.Data.graphConfig.paths}},
+        {{$.Site.Data.graphConfig.depth}},
+        {{$.Site.Data.graphConfig.enableDrag}},
+        {{$.Site.Data.graphConfig.enableLegend}},
+        {{$.Site.Data.graphConfig.enableZoom}}
+      );
 
       {{if $.Site.Data.config.enableLinkPreview}}
-      initPopover(
-        {{strings.TrimRight "/" .Site.BaseURL }},
-        {{$.Site.Data.config.enableContextualBacklinks}},
-        {{$.Site.Data.config.enableLatex}}
-      )
+      initPopover({{strings.TrimRight "/" .Site.BaseURL }}, {{$.Site.Data.config.enableContextualBacklinks}})
       {{end}}
-    }
-
-    const init = (doc = document) => {
-      // NOTE: everything within this callback will be executed for initial page navigation. This is a good place to put JavaScript that only replaces DOM nodes.
       {{if $.Site.Data.config.enableLatex}}
-      renderMathInElement(doc.body, {
+      renderMathInElement(document.body, {
         delimiters: [
           {left: '$$', right: '$$', display: true},
           {left: '$', right: '$', display: false},
@@ -103,23 +90,10 @@
       });
       {{end}}
     };
-  </script>
-  {{if $.Site.Data.config.enableSPA}}
-  {{ $router := resources.Get "js/router.js" | resources.Fingerprint "md5" |
-  resources.Minify }}
-  <script type="module">
-    import { attachSPARouting } from "{{$router.Permalink}}"
-    attachSPARouting(init, render)
+    attachSPARouting(draw);
   </script>
   {{else}}
-  <script>
-    window.Million = {
-      navigate: (url) => (window.location.href = url),
-      prefetch: () => {},
-    }
-    init()
-    render()
-  </script>
+  <script>window.navigate = (url) => window.location.href = url</script>
   {{end}}
 </head>
 {{ template "_internal/google_analytics.html" . }}
